--- a/requirements.txt
+++ b/requirements.txt
@@ -138,7 +138,7 @@ tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.0
 torch==2.0.1
-torchaudio==2.0.2+cu117
+#torchaudio==2.0.2+cu117
 torchvision==0.15.2
 tornado==6.3.2
 tqdm==4.65.0
